# logging_server

./: Makefile  README.md  example_failed.py  example_succeeded.py  pyproject.toml  python-tests.bat  test_mp_logging.py
.github/workflows/: run_test.yml
logging_server/: __init__.py  handlers.py  logger.py  server.py
tests/: test_logger.py  test_logging_server.py  test_mp_logging.py  test_pickled.py  test_server.py
