[tool.poetry]
name = "logging_server"
version = "1.0.1"
repository="https://github.com/Geson-anko/logging_server"
description = "The logging tool for python multiprocessing."
authors = ["Yasuhiro Shimomura <22shimoyasu22@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
